# Rivo

./: .gitignore  README.md  pyproject.toml
.open-webui-data/: webui.db
backend/: __init__.py  main.py  requirements.txt  server.py  test_poly.py  test_tools.py
backend/agents/: graph.py  nodes.py  state.py
backend/storage/: graph_store.py  vector_store.py
backend/storage/chroma_db/: chroma.sqlite3
backend/tools/: calculator.py  env.py  global_api.py  hermes_polymarket.py  indian_api.py  news_aggregator.py  sec_api.py
scripts/: kill.sh  start.sh
