[project]
name = "my-finance-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alpha-vantage>=3.0.0",
    "chromadb>=1.5.8",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.0",
    "finnhub-python>=2.4.27",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.8",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
    "yfinance>=1.3.0",
]
